# guardian

./: .gitignore  .travis.yml  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am  guardian.conf
data/schema/: Makefile.am  sqlite.schema  sqlite3.schema
docs/: Makefile.am
docs/libguardian/: Makefile.am  libguardian.conf
docs/man/: Makefile.am  guardian.1.in  guardian.conf.5.in  guardiand.1.in  libguardian.3.in
guardian/: Makefile.am  client.c  client.h  guardian.c  interactive_menu.c  interactive_menu.h  scheduler.c  scheduler.h  search_dialog.c  search_dialog.h  search_window.c  search_window.h  settings.c  settings.h  shell.c  shell.h  timeframe_dialog.c  timeframe_dialog.h  util.c  util.h
guardian/shell/: connect.c  connect.h  disconnect.c  disconnect.h  exit.c  exit.h  help.c  help.h  register.c  register.h
guardiand/: Makefile.am  acl.c  acl.h  db.c  db.h  guardian.c  role.c  role.h  scheduler.c  scheduler.h  settings.c  settings.h  util.c  util.h  worker.c  worker.h
libguardian/: Makefile.am  assert.c  assert.h  entry.c  entry.h  error.c  error.h  expression.c  expression.h  field.c  field.h  file.c  file.h  host.h  item.c  item.h  itemtype.h  libguardian.c  libguardian.h  log.c  log.h  memory.c  memory.h  metric.c  metric.h  ns.h  plugin-db.c  plugin-db.h  plugin.c  plugin.h  source.c  source.h  sourceengine.c  sourceengine.h  sourcetype.c  sourcetype.h  time.c  time.h  timestamp.c  timestamp.h  (+3 more)
plugins/: Makefile.am
plugins/generator-plugin/: Makefile.am  generator-engine.c  generator-engine.h  generator-plugin.c
plugins/httpd/: Makefile.am  httpd.c
plugins/pgsql-db-plugin/: Makefile.am  db.c  db.h  host.c  host.h  metric.c  metric.h  ns.c  ns.h  pgsql-db-plugin.c  plugin.c
plugins/sqlite3-db-plugin/: Makefile.am  db.c  db.h  host.c  host.h  metric.c  metric.h  ns.c  ns.h  perm.c  perm.h  plugin.c  sqlite3-db-plugin.c  value.c  value.h
plugins/syslog/: Makefile.am  syslog.c
plugins/syslog-plugin/: Makefile.am  syslog-file-engine.c  syslog-file-engine.h  syslog-plugin.c  syslog-tcp-engine.c  syslog-tcp-engine.h  syslog-udp-engine.c  syslog-udp-engine.h
plugins/system-plugin/: Makefile.am  system-plugin.c
tests/: Makefile.am
tests/db-plugins/: Makefile.am  pgsql-api.sh  pgsql-db-connect.sh  pgsql-db-listprop.conf  pgsql-db-listprop.sh  pgsql-db-plugin.symbols  pgsql-symbols.sh  plugin-loader.c  sqlite3-api.sh  sqlite3-db-connect.conf  sqlite3-db-connect.sh  sqlite3-db-host.sh  sqlite3-db-listprop.conf  sqlite3-db-listprop.sh  sqlite3-db-ns.sh  sqlite3-db-perm.sh  sqlite3-symbols.sh
tests/guardian/: Makefile.am  style.sh  style.test
tests/guardiand/: Makefile.am  style.sh  style.test
tests/libguardian/: Makefile.am  expression-helper.c  expression.test  file-helper.c  file-read.test  file-verify.test  libguardian-helper.c  source-helper.c  style.sh  style.test  timestamp-helper.c  timestamp-syslog.test  timezone.test
tests/plugins/: Makefile.am  httpd-plugin.test  missing-plugin.sh  missing-plugin.test  plugin-loader.c  style.sh  syslog-plugin.test  syslog.test  system-plugin.sh
